# duix.core

./: .gitattributes  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt  start_avatar.sh  start_ubuntu.sh  supervisord.conf
aisdk/: aimodel.h
audio/: requirements.txt  server.py  silvad.py  start_audio_server.sh
audio/src/: asr.cpp  asr.h  main.cc  sense_voice.cpp  sense_voice.h  vad.cpp  vad.h
base/: BaseRenderHelper.h
cmake/: kaldi-native-fbank.cmake  libsamplerate.cmake  nlohmann_json.cmake  websocketpp.cmake
conf/: conf.json  ubuntu_install.sh  walk.py
digit/: FakeRender.h  GDigit.h  netwav.cpp  netwav.h
ext/: clog.cpp  clog.h  edge_render.cpp  edge_render.h  main.cpp  model_info.h  wav_reader.h
main/: audio.h  clog.h  config.cpp  config.h  edge_render.cpp  edge_render.h  httplib.cpp  main.cpp  model_info.h  offline.cc  server.cc  tts.cpp  tts.h  util.h  video.cpp  wav_reader.h
src/: audio.h  block_queue.h  clog.cpp  clog.h  config.cpp  config.h  edge_render.cpp  edge_render.h  fetch.cpp  fetch.h  http_server.cc  lm_client.cpp  lm_client.h  model_info.h  offline.cc  server.cc  tts.cpp  util.cpp  util.h  video.h  wav_reader.h  ws_server.cc
third/ncnn/include/ncnn/: platform.h
third/ncnn/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake
third/onnxruntime-linux-x64-1.21.0/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
third/onnxruntime-linux-x64-1.21.0/lib/pkgconfig/: libonnxruntime.pc
tools/: curl.sh  ubuntu_install.sh
web/: index.html  start_web.sh  styles.css
web/scripts/: index.js
